@@ -1057,7 +1057,11 @@ static bool u16550_txempty(struct uart_dev_s *dev)
 
 static void u16550_putc(struct u16550_s *priv, int ch)
 {
+#ifdef CONFIG_16550_THRNE
+  while ((u16550_serialin(priv, UART_LSR_OFFSET) & UART_LSR_THRNE) == 0);
+#else
   while ((u16550_serialin(priv, UART_LSR_OFFSET) & UART_LSR_THRE) != 0);
+#endif
   u16550_serialout(priv, UART_THR_OFFSET, (uart_datawidth_t)ch);
 }
 
